--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
+# Configurations
+title:            Jekyll Gitbook
+longtitle:        Jekyll Gitbook
+
+remote_theme:     sighingnow/jekyll-gitbook
+
 syntax_highlighter_style: colorful
 toc:
     enabled: true
